--- a/frontend/src/styles/login-register.css
+++ b/frontend/src/styles/login-register.css
@@ -49,6 +49,30 @@
   color: white;
 }
 
+.signup-profile-pic__container {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.signup-profile-pic {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 2px solid grey;
+  object-fit: cover;
+}
+
+.add-picture-icon {
+  position: absolute;
+  bottom: 0;
+  right: 12px;
+  color: green;
+  cursor: pointer;
+  z-index: 99;
+}
+
 @media only screen and (max-width: 1003px) {
   .login-image {
     display: none;
