--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,14 +2,9 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 .btn {
@@ -34,4 +29,8 @@ h6 {
 input {
   outline-width: 0px;
   outline: none;
+}
+
+.MuiSvgIcon-root {
+  color: white;
 }
